Wrap text in <pre>. Add <audio> and <img> to html output. Add format_header()

--- a/Incident-Calls-and-Messages.html
+++ b/Incident-Calls-and-Messages.html
@@ -1,11 +1,21 @@
+<!doctype html>
+<html>
+<head>
+<style>
+pre { font-family: monospace;  font-size: 1.2em;  width: 100%;  text-wrap: wrap;}
+img { max-width: 800px;   border: 1px black solid;  border-radius: 1rem;}
+</style>
+</head>
+<body>
+<pre>
 ------------------------------------------------------------
-FILENAME   : Incident-Calls-and-Messages.txt
+FILENAME   : Incident-Calls-and-Messages.html
 START DATE : Sat Nov 02 2024 12:00:00 AM PDT
 END DATE   : Mon Nov 04 2024 11:59:59 PM PST
 CONTACT(S) : All
 
 (For source code see:
-https://github.com/petergrace1618/textnow-data-extractor.git)
+<a href="https://github.com/petergrace1618/textnow-data-extractor.git">https://github.com/petergrace1618/textnow-data-extractor.git</a>)
 ------------------------------------------------------------
 
 Sat Nov 02 2024 01:30:53 AM PDT
@@ -26,7 +36,7 @@ Duration 47.0 (0m 47s)
 
 Sat Nov 02 2024 01:04:22 PM PDT
 Voicemail     from ← ← ← +1541766XXXX 
-[File: textnow-data\voicemail\093081df-81c1-47fb-a7d7-59fdca6ab412_15037564626_+15417666200.wav]
+<audio controls src="textnow-data\voicemail\093081df-81c1-47fb-a7d7-59fdca6ab412_15037564626_+15417666200.wav"></audio>
 
 Sat Nov 02 2024 01:04:48 PM PDT
 Text message  from ← ← ← +1541766XXXX 
@@ -125,7 +135,7 @@ Duration 15.0 (0m 15s)
 
 Sun Nov 03 2024 12:19:28 AM PDT
 Voicemail     from ← ← ← +1503344XXXX Gyps
-[File: textnow-data\voicemail\0adae450-fa10-4302-b297-4828a43e05a8_15037564626_+15033449503.wav]
+<audio controls src="textnow-data\voicemail\0adae450-fa10-4302-b297-4828a43e05a8_15037564626_+15033449503.wav"></audio>
 
 Sun Nov 03 2024 12:20:00 AM PDT
 Incoming call from ← ← ← +1503344XXXX Gyps
@@ -197,7 +207,7 @@ Duration 13.0 (0m 13s)
 
 Sun Nov 03 2024 01:56:44 AM PDT
 Voicemail     from ← ← ← +1299999XXXX 
-[File: textnow-data\voicemail\f41c5d31-fe94-4400-8109-3bc3729af04c_15037564626_Restricted.wav]
+<audio controls src="textnow-data\voicemail\f41c5d31-fe94-4400-8109-3bc3729af04c_15037564626_Restricted.wav"></audio>
 
 Sun Nov 03 2024 01:56:52 AM PDT
 Text message  from ← ← ← +1299999XXXX 
@@ -229,7 +239,7 @@ Duration 45.0 (0m 45s)
 
 Sun Nov 03 2024 01:44:19 AM PST
 Voicemail     from ← ← ← +1503344XXXX Gyps
-[File: textnow-data\voicemail\13e452d9-8ab5-4399-98a5-edc02049e8b3_15037564626_+15033449503.wav]
+<audio controls src="textnow-data\voicemail\13e452d9-8ab5-4399-98a5-edc02049e8b3_15037564626_+15033449503.wav"></audio>
 
 Sun Nov 03 2024 01:44:31 AM PST
 Text message  from ← ← ← +1503344XXXX Gyps
@@ -253,7 +263,7 @@ Duration 11.0 (0m 11s)
 
 Sun Nov 03 2024 02:15:58 AM PST
 Voicemail     from ← ← ← +1503449XXXX Matty Leslie
-[File: textnow-data\voicemail\418f3d0f-8f65-4839-87c8-3f30b5c96d0e_15037564626_+15034495052.wav]
+<audio controls src="textnow-data\voicemail\418f3d0f-8f65-4839-87c8-3f30b5c96d0e_15037564626_+15034495052.wav"></audio>
 
 Sun Nov 03 2024 02:16:05 AM PST
 Text message  from ← ← ← +1503449XXXX Matty Leslie
@@ -273,7 +283,7 @@ Text message  from ← ← ← +1503344XXXX Gyps
 
 Sun Nov 03 2024 09:49:21 AM PST
 Media message from ← ← ← +1503964XXXX Zach O
-[File: textnow-data\media\f45c7890-9a0b-11ef-88b7-6a277e60ac82.png]
+<img src="textnow-data\media\f45c7890-9a0b-11ef-88b7-6a277e60ac82.png" alt="textnow-data\media\f45c7890-9a0b-11ef-88b7-6a277e60ac82.png">
 
 Sun Nov 03 2024 11:16:32 AM PST
 Text message  from ← ← ← +1503573XXXX Adam Garcia
@@ -417,7 +427,7 @@ Duration 13.0 (0m 13s)
 
 Mon Nov 04 2024 12:07:13 AM PST
 Voicemail     from ← ← ← +1503344XXXX Gyps
-[File: textnow-data\voicemail\82096307-f30b-4ad8-8d33-6457f05d2b03_15037564626_+15033449503.wav]
+<audio controls src="textnow-data\voicemail\82096307-f30b-4ad8-8d33-6457f05d2b03_15037564626_+15033449503.wav"></audio>
 
 Mon Nov 04 2024 02:07:10 AM PST
 Incoming call from ← ← ← +1503344XXXX Gyps
@@ -512,4 +522,7 @@ Text message  to → → → → +1503344XXXX Gyps
 "Also I want my guitars and my comic books back."
 
 ------------------------------------------------------------
-END: Incident-Calls-and-Messages.txt
+END: Incident-Calls-and-Messages.html
+</pre>
+</body>
+</html>
