--- a/Incident-Calls-and-Messages.html
+++ b/Incident-Calls-and-Messages.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 <style>
-pre { font-family: monospace;  font-size: 1.2em;  width: 100%;  text-wrap: wrap;}
-img { max-width: 800px;   border: 1px black solid;  border-radius: 1rem;}
+pre { font-family: Roboto, monospace;  font-size: 1.2em;  width: 100%;  text-wrap: wrap;}
+img { max-width: 600px;   border: 1px black solid;  border-radius: 1rem;}
 </style>
 </head>
 <body>
