Move output files to output/. Add output/ to .gitignore. Change textnow-data-extractor.py to save output files in ouput/. Add exception handler to save block.

--- a/output/post-incident-calls-and-messages.html
+++ b/output/post-incident-calls-and-messages.html
@@ -1,19 +1,22 @@
 <!doctype html>
 <html>
 <head>
-<style> pre { font-family: monospace; } </style>
+<style>
+pre { font-family: Roboto, monospace;  font-size: 1.2em;  width: 100%;  text-wrap: wrap;}
+img { max-width: 600px;   border: 1px black solid;  border-radius: 1rem;}
+</style>
 </head>
 <body>
 <pre>
-----------------------------------------------------
-FILENAME   : Post-incident-Calls-and-Messages.html
+------------------------------------------------------------
+FILENAME   : post-incident-calls-and-messages.html
 START DATE : Tue Nov 05 2024 12:00:00 AM PST
-END DATE   : Sun Jul 27 2025 11:59:59 PM PDT
+END DATE   : Fri Feb 28 2025 11:59:59 PM PST
 CONTACT(S) : +15035726103 Gyps
 
-(For source code and data see:
-https://github.com/petergrace1618/textnow-data-extractor.git)
-----------------------------------------------------
+(For source code see:
+<a href="https://github.com/petergrace1618/textnow-data-extractor.git">https://github.com/petergrace1618/textnow-data-extractor.git</a>)
+------------------------------------------------------------
 
 Fri Nov 15 2024 01:33:11 PM PST
 Text message  from ← ← ← +1503572XXXX Gyps
@@ -45,7 +48,7 @@ Text message  to → → → → +1503572XXXX Gyps
 
 Fri Dec 06 2024 01:29:42 PM PST
 Media message to → → → → +1503572XXXX Gyps
-[File: textnow-data\media\b06af2a8-59d0-5694-94dd-118a01228266.jpeg]
+<img src="textnow-data\media\b06af2a8-59d0-5694-94dd-118a01228266.jpeg" alt="textnow-data\media\b06af2a8-59d0-5694-94dd-118a01228266.jpeg">
 
 Fri Dec 27 2024 10:09:10 PM PST
 Incoming call from ← ← ← +1503572XXXX Gyps
@@ -107,8 +110,8 @@ Fri Dec 27 2024 10:45:17 PM PST
 Text message  from ← ← ← +1503572XXXX Gyps
 "Talk to you later. He's saying to expect a letter in the mail"
 
-----------------------------------------------------
-END: Post-incident-Calls-and-Messages.html
+------------------------------------------------------------
+END: post-incident-calls-and-messages.html
 </pre>
 </body>
 </html>
